adaption to signature change in qapla-engine-tester

--- a/i18n/eng.lang
+++ b/i18n/eng.lang
@@ -1,11 +1,11 @@
 [Translation]
 id=Button
-{s:"Add",t:"2026-01-02"}=Add
-{s:"Remove",t:"2026-01-02"}=Remove
-{s:"Detect",t:"2026-01-02"}=Detect
+{s:"Add",t:"2026-01-11"}=Add
+{s:"Remove",t:"2026-01-11"}=Remove
+{s:"Detect",t:"2026-01-11"}=Detect
 {s:"New",t:"2025-12-28"}=New
 {s:"Now",t:"2025-12-28"}=Now
-{s:"Stop",t:"2026-01-02"}=Stop
+{s:"Stop",t:"2026-01-11"}=Stop
 {s:"Play",t:"2025-12-28"}=Play
 {s:"Analyze",t:"2025-12-28"}=Analyze
 {s:"Auto",t:"2025-12-28"}=Auto
@@ -17,28 +17,28 @@ id=Button
 {s:"Swap",t:"2025-12-28"}=Swap
 {s:"Restart",t:"2025-12-28"}=Restart
 {s:"Log",t:"2025-12-28"}=Log
-{s:"Run",t:"2026-01-02"}=Run
-{s:"Clear",t:"2026-01-02"}=Clear
+{s:"Run",t:"2026-01-11"}=Run
+{s:"Clear",t:"2026-01-11"}=Clear
 {s:"Grace",t:"2026-01-02"}=Grace
 {s:"Open",t:"2025-12-16"}=Open
 {s:"Recent",t:"2025-12-16"}=Recent
-{s:"Save As",t:"2026-01-02"}=Save As
+{s:"Save As",t:"2026-01-11"}=Save As
 {s:"Filter",t:"2025-12-16"}=Filter
-{s:"Test",t:"2026-01-02"}=Test
-{s:"Load",t:"2026-01-02"}=Load
+{s:"Test",t:"2026-01-11"}=Test
+{s:"Load",t:"2026-01-11"}=Load
 {s:"Continue",t:"2025-12-28"}=Continue
 {s:"Ok",t:"2025-12-15"}=Ok
 {s:"Copy",t:"2025-12-15"}=Copy
 {s:"Paste",t:"2025-12-28"}=Paste
 {s:"Cancel",t:"2025-12-22"}=Cancel
-{s:"RGC",t:"2026-01-02"}=RGC
+{s:"RGC",t:"2026-01-11"}=RGC
 {s:"Browse",t:"2025-12-28"}=Browse
 {s:"Apply",t:"2025-12-18"}=Apply
 {s:"Reset All Tutorials",t:"2025-12-16"}=Reset All Tutorials
 {s:"Use",t:"2025-12-16"}=Use
 {s:"Copy PGN",t:"2025-12-15"}=Copy PGN
 {s:"Copy FEN",t:"2025-12-15"}=Copy FEN
-{s:"Select",t:"2025-12-31"}=Select
+{s:"Select",t:"2026-01-11"}=Select
 {s:"Tournament",t:"2025-12-14"}=Tournament
 {s:"SPRT Tournament",t:"2025-12-14"}=SPRT Tournament
 {s:"Tutorial",t:"2025-12-14"}=Tutorial
@@ -114,7 +114,7 @@ id=Checkbox
 {s:"Score from White POV",t:"2025-12-28"}=Score from White POV
 {s:"Ponder",t:"2025-12-28"}=Ponder
 {s:"Gauntlet",t:"2025-12-28"}=Gauntlet
-{s:"Use Pentanomial",t:"2025-12-31"}=Use Pentanomial
+{s:"Use Pentanomial",t:"2026-01-11"}=Use Pentanomial
 {s:"Show all SPRT model variants",t:"2026-01-02"}=Show all SPRT model variants
 
 [Translation]
@@ -122,41 +122,41 @@ id=Input
 {s:"Seen plies",t:"2025-12-21"}=Seen plies
 {s:"Max time (s)",t:"2025-12-21"}=Max time (s)
 {s:"Min time (s)",t:"2025-12-21"}=Min time (s)
-{s:"Hash (MB)",t:"2025-12-31"}=Hash (MB)
-{s:"Minutes",t:"2025-12-31"}=Minutes
-{s:"Seconds",t:"2025-12-31"}=Seconds
-{s:"Increment Seconds",t:"2025-12-31"}=Increment Seconds
-{s:"Increment Milliseconds",t:"2025-12-31"}=Increment Milliseconds
-{s:"Predefined time control",t:"2025-12-31"}=Predefined time control
+{s:"Hash (MB)",t:"2026-01-11"}=Hash (MB)
+{s:"Minutes",t:"2026-01-11"}=Minutes
+{s:"Seconds",t:"2026-01-11"}=Seconds
+{s:"Increment Seconds",t:"2026-01-11"}=Increment Seconds
+{s:"Increment Milliseconds",t:"2026-01-11"}=Increment Milliseconds
+{s:"Predefined time control",t:"2026-01-11"}=Predefined time control
 {s:"Event",t:"2025-12-23"}=Event
 {s:"Type",t:"2025-12-23"}=Type
 {s:"Rounds",t:"2025-12-23"}=Rounds
 {s:"Games per pairing",t:"2025-12-23"}=Games per pairing
-{s:"Order",t:"2025-12-31"}=Order
-{s:"Append mode",t:"2025-12-31"}=Append mode
-{s:"Save only finished games",t:"2025-12-31"}=Save only finished games
-{s:"Minimal tags",t:"2025-12-31"}=Minimal tags
-{s:"Concurrency",t:"2026-01-02"}=Concurrency
-{s:"First opening",t:"2025-12-31"}=First opening
-{s:"Random seed",t:"2025-12-31"}=Random seed
-{s:"Switch policy",t:"2025-12-31"}=Switch policy
-{s:"Restart",t:"2025-12-31"}=Restart
-{s:"Trace",t:"2025-12-31"}=Trace
+{s:"Order",t:"2026-01-11"}=Order
+{s:"Append mode",t:"2026-01-11"}=Append mode
+{s:"Save only finished games",t:"2026-01-11"}=Save only finished games
+{s:"Minimal tags",t:"2026-01-11"}=Minimal tags
+{s:"Concurrency",t:"2026-01-11"}=Concurrency
+{s:"First opening",t:"2026-01-11"}=First opening
+{s:"Random seed",t:"2026-01-11"}=Random seed
+{s:"Switch policy",t:"2026-01-11"}=Switch policy
+{s:"Restart",t:"2026-01-11"}=Restart
+{s:"Trace",t:"2026-01-11"}=Trace
 {s:"Same opening",t:"2025-12-23"}=Same opening
 {s:"No color swap",t:"2025-12-23"}=No color swap
 {s:"Average Elo",t:"2025-12-23"}=Average Elo
-{s:"Include clock",t:"2025-12-31"}=Include clock
-{s:"Include eval",t:"2025-12-31"}=Include eval
-{s:"Include PV",t:"2025-12-31"}=Include PV
-{s:"Include depth",t:"2025-12-31"}=Include depth
+{s:"Include clock",t:"2026-01-11"}=Include clock
+{s:"Include eval",t:"2026-01-11"}=Include eval
+{s:"Include PV",t:"2026-01-11"}=Include PV
+{s:"Include depth",t:"2026-01-11"}=Include depth
 Elo Lower (H0)=Elo Lower (H0)
 Elo Upper (H1)=Elo Upper (H1)
-{s:"Max Games",t:"2025-12-31"}=Max Games
-{s:"Alpha (‰)",t:"2025-12-31"}=Alpha (‰)
-{s:"Beta (‰)",t:"2025-12-31"}=Beta (‰)
-{s:"Hours",t:"2025-12-31"}=Hours
-{s:"Increment Minutes",t:"2025-12-31"}=Increment Minutes
-{s:"Moves to Play",t:"2025-12-31"}=Moves to Play
+{s:"Max Games",t:"2026-01-11"}=Max Games
+{s:"Alpha (‰)",t:"2026-01-11"}=Alpha (‰)
+{s:"Beta (‰)",t:"2026-01-11"}=Beta (‰)
+{s:"Hours",t:"2026-01-11"}=Hours
+{s:"Increment Minutes",t:"2026-01-11"}=Increment Minutes
+{s:"Moves to Play",t:"2026-01-11"}=Moves to Play
 {s:"Name",t:"2025-12-28"}=Name
 {s:"Hash",t:"2025-12-28"}=Hash
 {s:"ponder",t:"2025-12-28"}=ponder
@@ -187,35 +187,40 @@ Elo Upper (H1)=Elo Upper (H1)
 {s:"UCI_LimitStrength",t:"2025-12-28"}=UCI_LimitStrength
 {s:"UCI_Elo",t:"2025-12-28"}=UCI_Elo
 {s:"Search",t:"2026-01-02"}=Search
-{s:"Elo Lower (H\\1)",t:"2025-12-31"}=Elo Lower (H\1)
-{s:"Elo Upper (H\\1)",t:"2025-12-31"}=Elo Upper (H\1)
-{s:"Active",t:"2025-12-31"}=Active
-{s:"Min full moves",t:"2025-12-31"}=Min full moves
-{s:"Required consecutive moves",t:"2025-12-31"}=Required consecutive moves
-{s:"Centipawn threshold",t:"2025-12-31"}=Centipawn threshold
+{s:"Elo Lower (H\\1)",t:"2026-01-11"}=Elo Lower (H\1)
+{s:"Elo Upper (H\\1)",t:"2026-01-11"}=Elo Upper (H\1)
+{s:"Active",t:"2026-01-11"}=Active
+{s:"Min full moves",t:"2026-01-11"}=Min full moves
+{s:"Required consecutive moves",t:"2026-01-11"}=Required consecutive moves
+{s:"Centipawn threshold",t:"2026-01-11"}=Centipawn threshold
 {s:"Number of Games",t:"2025-12-16"}=Number of Games
 {s:"Ponder",t:"2025-12-28"}=Ponder
 {s:"Log",t:"2025-12-28"}=Log
 {s:"UCI_AnalyseMode",t:"2025-12-28"}=UCI_AnalyseMode
 {s:"##directoryPath#####directoryPath",t:"2025-12-28"}=##directoryPath#####directoryPath
-{s:"##filePath#####filePath",t:"2025-12-31"}=##filePath#####filePath
+{s:"##filePath#####filePath",t:"2026-01-11"}=##filePath#####filePath
 {s:"Milliseconds",t:"2025-12-13"}=Milliseconds
 {s:"EGTB depth",t:"2025-12-16"}=EGTB depth
 {s:"##enpassant#####enpassant",t:"2025-12-15"}=##enpassant#####enpassant
 {s:"##fullmove#####fullmove",t:"2025-12-15"}=##fullmove#####fullmove
 {s:"##halfmove#####halfmove",t:"2025-12-15"}=##halfmove#####halfmove
 {s:"Threads",t:"2025-12-22"}=Threads
-{s:"Both side decides",t:"2025-12-28"}=Both side decides
+{s:"Both side decides",t:"2026-01-11"}=Both side decides
 {s:"Underpromotions",t:"2025-12-22"}=Underpromotions
 {s:"Move Overhead",t:"2025-12-22"}=Move Overhead
 {s:"Arguments",t:"2025-12-28"}=Arguments
-{s:"SPRT Model",t:"2025-12-31"}=SPRT Model
+{s:"SPRT Model",t:"2026-01-11"}=SPRT Model
+{s:"kAttackLinear",t:"2026-01-11"}=kAttackLinear
+{s:"kAttackQuadratic",t:"2026-01-11"}=kAttackQuadratic
+{s:"kAttackActivation",t:"2026-01-11"}=kAttackActivation
+{s:"kAttackDampening",t:"2026-01-11"}=kAttackDampening
+{s:"kAttackScale",t:"2026-01-11"}=kAttackScale
 
 [Translation]
 id=Snackbar
-{s:"Note",t:"2025-12-23"}=Note
-{s:"Nothing to clear.",t:"2025-12-22"}=Nothing to clear.
-{s:"Success",t:"2026-01-02"}=Success
+{s:"Note",t:"2026-01-11"}=Note
+{s:"Nothing to clear.",t:"2026-01-11"}=Nothing to clear.
+{s:"Success",t:"2026-01-11"}=Success
 {s:"SPRT tournament started",t:"2026-01-02"}=SPRT tournament started
 {s:"SPRT tournament stopped",t:"2025-12-21"}=SPRT tournament stopped
 {s:"Epd analysis started",t:"2025-12-21"}=Epd analysis started
@@ -289,6 +294,8 @@ id=Snackbar
 {s:"Tournament saved to: C:\\Development\\qapla-chess-gui\\test\\log\\bug.qtour",t:"2025-12-23"}=Tournament saved to: C:\Development\qapla-chess-gui\test\log\bug.qtour
 {s:"Tournament loaded from: C:\\Development\\qapla-chess-gui\\test\\log\\bug.qtour",t:"2025-12-23"}=Tournament loaded from: C:\Development\qapla-chess-gui\test\log\bug.qtour
 {s:"SPRT tournament stopped.\nAll SPRT tournament results have been cleared.",t:"2025-12-28"}=SPRT tournament stopped.\nAll SPRT tournament results have been cleared.
+{s:"SPRT tournament saved to: C:\\Development\\qapla-chess-gui\\test\\log\\bug.qsprt",t:"2026-01-11"}=SPRT tournament saved to: C:\Development\qapla-chess-gui\test\log\bug.qsprt
+{s:"SPRT tournament loaded from: C:\\Development\\qapla-chess-gui\\test\\log\\bug.qsprt",t:"2026-01-11"}=SPRT tournament loaded from: C:\Development\qapla-chess-gui\test\log\bug.qsprt
 
 [Translation]
 id=Table
@@ -349,7 +356,7 @@ id=Table
 id=Tooltip
 {s:"Add this engine to tournament selection",t:"2025-12-23"}=Add this engine to tournament selection
 {s:"Clear all tournament data and results",t:"2025-12-23"}=Clear all tournament data and results
-{s:"Number of games running in parallel",t:"2026-01-02"}=Number of games running in parallel
+{s:"Number of games running in parallel",t:"2026-01-11"}=Number of games running in parallel
 {s:"Tournament progress: games played / total games",t:"2025-12-28"}=Tournament progress: games played / total games
 {s:"Repeat all pairings this many times",t:"2025-12-23"}=Repeat all pairings this many times
 {s:"Disable automatic color swap after each game",t:"2025-12-23"}=Disable automatic color swap after each game
@@ -357,24 +364,24 @@ id=Tooltip
 {s:"Add new engine from executable file",t:"2025-12-23"}=Add new engine from executable file
 {s:"Allow engines to think during opponent's time",t:"2025-12-21"}=Allow engines to think during opponent's time
 {s:"Path to opening file (.epd, .pgn, or raw FEN text)",t:"2025-12-21"}=Path to opening file (.epd, .pgn, or raw FEN text)
-{s:"Hash table size in megabytes for engine memory",t:"2025-12-21"}=Hash table size in megabytes for engine memory
+{s:"Hash table size in megabytes for engine memory",t:"2026-01-11"}=Hash table size in megabytes for engine memory
 {s:"Number of games to run in parallel",t:"2025-12-21"}=Number of games to run in parallel
-{s:"Clear all SPRT tournament data and results",t:"2026-01-02"}=Clear all SPRT tournament data and results
+{s:"Clear all SPRT tournament data and results",t:"2026-01-11"}=Clear all SPRT tournament data and results
 {s:"Remove this engine from selection",t:"2025-12-28"}=Remove this engine from selection
 {s:"Run Monte Carlo test to estimate SPRT test duration",t:"2025-12-21"}=Run Monte Carlo test to estimate SPRT test duration
-{s:"Load SPRT tournament configuration and results from file",t:"2025-12-31"}=Load SPRT tournament configuration and results from file
-{s:"Save SPRT tournament configuration and results to file",t:"2025-12-21"}=Save SPRT tournament configuration and results to file
+{s:"Load SPRT tournament configuration and results from file",t:"2026-01-11"}=Load SPRT tournament configuration and results from file
+{s:"Save SPRT tournament configuration and results to file",t:"2026-01-11"}=Save SPRT tournament configuration and results to file
 {s:"Seed for random number generator when order is 'random'",t:"2025-12-21"}=Seed for random number generator when order is 'random'
 {s:"Include the engine's evaluation score in PGN comments for each move",t:"2025-12-21"}=Include the engine's evaluation score in PGN comments for each move
 {s:"Include the search depth reached when the move was selected",t:"2025-12-16"}=Include the search depth reached when the move was selected
 {s:"Number of positions to analyze in parallel",t:"2025-12-21"}=Number of positions to analyze in parallel
-{s:"Enable global hash size setting for all engines",t:"2025-12-23"}=Enable global hash size setting for all engines
+{s:"Enable global hash size setting for all engines",t:"2026-01-11"}=Enable global hash size setting for all engines
 {s:"Enable global restart policy for all engines",t:"2025-12-23"}=Enable global restart policy for all engines
 {s:"Enable global trace level for all engines",t:"2025-12-23"}=Enable global trace level for all engines
 {s:"Enable global pondering setting for all engines",t:"2025-12-23"}=Enable global pondering setting for all engines
 {s:"Optional event name for PGN or logging",t:"2025-12-23"}=Optional event name for PGN or logging
-{s:"Engine communication logging level (None/All/Command only)",t:"2025-12-23"}=Engine communication logging level (None/All/Command only)
-{s:"Whether to restart engine process between games",t:"2025-12-23"}=Whether to restart engine process between games
+{s:"Engine communication logging level (None/All/Command only)",t:"2026-01-11"}=Engine communication logging level (None/All/Command only)
+{s:"Whether to restart engine process between games",t:"2026-01-11"}=Whether to restart engine process between games
 {s:"Translation is currently work in progress. Only few parts are translated.",t:"2025-12-18"}=Translation is currently work in progress. Only few parts are translated.
 {s:"Display duration for informational messages in seconds",t:"2025-12-16"}=Display duration for informational messages in seconds
 {s:"Display duration for success messages in seconds",t:"2025-12-16"}=Display duration for success messages in seconds
@@ -551,18 +558,19 @@ id=Tooltip
 {s:"Command-line arguments to pass to the engine executable",t:"2025-12-28"}=Command-line arguments to pass to the engine executable
 {h:"e0ffa06c",s:"SPRT calculation model:\n- normalized: Recommended ",t:"2025-12-31"}=SPRT calculation model:\n- normalized: Recommended for most cases (supports pentanomial)\n- logistic: Logistic Elo model (supports pentanomial)\n- bayesian: BayesElo model (trinomial only)
 {h:"2102e505",s:"Use pentanomial statistics instead of trinomial.\nP",t:"2025-12-31"}=Use pentanomial statistics instead of trinomial.\nPentanomial provides more accurate results for paired openings.\nNote: Not available with bayesian model.
+{h:"d5c004e6",s:"Display all SPRT calculation variants (normalized,",t:"2026-01-11"}=Display all SPRT calculation variants (normalized, logistic, bayesian with trinomial/pentanomial).\nWhen disabled, only the configured model is shown.
 
 [Translation]
 id=Tab
-{s:"Engines",t:"2026-01-02"}=Engines
-{s:"Tournament",t:"2026-01-02"}=Tournament
-{s:"Pgn",t:"2026-01-02"}=Pgn
-{s:"Epd",t:"2026-01-02"}=Epd
-{s:"Test",t:"2026-01-02"}=Test
-{s:"Settings",t:"2026-01-02"}=Settings
-{s:"Board",t:"2026-01-02"}=Board
-{s:"Chatbot",t:"2026-01-02"}=Chatbot
-{s:"SPRT",t:"2026-01-02"}=SPRT
+{s:"Engines",t:"2026-01-11"}=Engines
+{s:"Tournament",t:"2026-01-11"}=Tournament
+{s:"Pgn",t:"2026-01-11"}=Pgn
+{s:"Epd",t:"2026-01-11"}=Epd
+{s:"Test",t:"2026-01-11"}=Test
+{s:"Settings",t:"2026-01-11"}=Settings
+{s:"Board",t:"2026-01-11"}=Board
+{s:"Chatbot",t:"2026-01-11"}=Chatbot
+{s:"SPRT",t:"2026-01-11"}=SPRT
 
 [Translation]
 id=Chatbot
@@ -758,7 +766,7 @@ id=Text
 {s:"No engines added. You can add engines now if you like.",t:"2025-12-16"}=No engines added. You can add engines now if you like.
 {s:"C:\\Chess\\cutechess-cli\\qapla\\1.\\2\\Leorik-\\3.\\4.exe",t:"2025-12-16"}=C:\Chess\cutechess-cli\qapla\1.\2\Leorik-\3.\4.exe
 {s:"Messages",t:"2025-12-16"}=Messages
-{s:"How can I help you?",t:"2026-01-02"}=How can I help you?
+{s:"How can I help you?",t:"2026-01-11"}=How can I help you?
 {s:"Select a tutorial to run:",t:"2025-12-21"}=Select a tutorial to run:
 {s:"Please select your preferred language:",t:"2025-12-19"}=Please select your preferred language:
 {h:"b0ade7c5",s:"Select which engine should be tested (gauntlet eng",t:"2025-12-21"}=Select which engine should be tested (gauntlet engine). This is the engine whose performance will be measured. The other engine will be used as the comparison baseline.
@@ -771,13 +779,13 @@ id=Text
 
 [Translation]
 id=TextButton
-{s:"Tournament",t:"2026-01-02"}=Tournament
-{s:"SPRT Tournament",t:"2026-01-02"}=SPRT Tournament
-{s:"EPD Analysis",t:"2026-01-02"}=EPD Analysis
-{s:"Board",t:"2026-01-02"}=Board
-{s:"Tutorial",t:"2026-01-02"}=Tutorial
-{s:"Choose Language",t:"2026-01-02"}=Choose Language
-{s:"Messages",t:"2026-01-02"}=Messages
+{s:"Tournament",t:"2026-01-11"}=Tournament
+{s:"SPRT Tournament",t:"2026-01-11"}=SPRT Tournament
+{s:"EPD Analysis",t:"2026-01-11"}=EPD Analysis
+{s:"Board",t:"2026-01-11"}=Board
+{s:"Tutorial",t:"2026-01-11"}=Tutorial
+{s:"Choose Language",t:"2026-01-11"}=Choose Language
+{s:"Messages",t:"2026-01-11"}=Messages
 {s:"Deutsch",t:"2025-12-19"}=Deutsch
 {s:"English",t:"2025-12-19"}=English
 {s:"Français",t:"2025-12-19"}=Français
@@ -787,7 +795,7 @@ id=TextButton
 {s:"Lernprogramm",t:"2025-12-18"}=Lernprogramm
 {s:"Sprache wählen",t:"2025-12-18"}=Sprache wählen
 {s:"Nachrichten",t:"2025-12-18"}=Nachrichten
-{s:"Add Engines",t:"2026-01-02"}=Add Engines
+{s:"Add Engines",t:"2026-01-11"}=Add Engines
 {s:"Cancel",t:"2025-12-21"}=Cancel
 {s:"Board Engines",t:"2025-12-21"}=Board Engines
 {s:"Board Window",t:"2025-12-21"}=Board Window
@@ -796,22 +804,22 @@ id=TextButton
 
 [Translation]
 id=Section
-{s:"Global Engine Settings",t:"2026-01-02"}=Global Engine Settings
-{s:"Engines",t:"2026-01-02"}=Engines
-{s:"Opening",t:"2026-01-02"}=Opening
+{s:"Global Engine Settings",t:"2026-01-11"}=Global Engine Settings
+{s:"Engines",t:"2026-01-11"}=Engines
+{s:"Opening",t:"2026-01-11"}=Opening
 {s:"Tournament",t:"2025-12-28"}=Tournament
-{s:"Time Control",t:"2026-01-02"}=Time Control
-{s:"Pgn",t:"2026-01-02"}=Pgn
-{s:"Adjudicate draw",t:"2026-01-02"}=Adjudicate draw
-{s:"Adjudicate resign",t:"2026-01-02"}=Adjudicate resign
+{s:"Time Control",t:"2026-01-11"}=Time Control
+{s:"Pgn",t:"2026-01-11"}=Pgn
+{s:"Adjudicate draw",t:"2026-01-11"}=Adjudicate draw
+{s:"Adjudicate resign",t:"2026-01-11"}=Adjudicate resign
 {s:"History",t:"2025-12-21"}=History
-{s:"SPRT Configuration",t:"2026-01-02"}=SPRT Configuration
+{s:"SPRT Configuration",t:"2026-01-11"}=SPRT Configuration
 
 [Translation]
 id=Option
-{s:"No",t:"2025-12-31"}=No
-{s:"Yes",t:"2025-12-31"}=Yes
-{s:"Inactive",t:"2025-12-31"}=Inactive
-{s:"Test",t:"2025-12-31"}=Test
-{s:"Active",t:"2025-12-31"}=Active
+{s:"No",t:"2026-01-11"}=No
+{s:"Yes",t:"2026-01-11"}=Yes
+{s:"Inactive",t:"2026-01-11"}=Inactive
+{s:"Test",t:"2026-01-11"}=Test
+{s:"Active",t:"2026-01-11"}=Active
 
