--- a/i18n/fra.lang
+++ b/i18n/fra.lang
@@ -1,11 +1,11 @@
 [Translation]
 id=Button
-{s:"Add",t:"2026-01-02"}=Ajouter
-{s:"Remove",t:"2026-01-02"}=Retirer
-{s:"Detect",t:"2026-01-02"}=Detecter
+{s:"Add",t:"2026-01-11"}=Ajouter
+{s:"Remove",t:"2026-01-11"}=Retirer
+{s:"Detect",t:"2026-01-11"}=Detecter
 {s:"New",t:"2025-12-28"}=Nouveau
 {s:"Now",t:"2025-12-28"}=Maint
-{s:"Stop",t:"2026-01-02"}=Arret
+{s:"Stop",t:"2026-01-11"}=Arret
 {s:"Play",t:"2025-12-28"}=Jouer
 {s:"Analyze",t:"2025-12-28"}=Analyser
 {s:"Auto",t:"2025-12-28"}=Auto
@@ -17,28 +17,28 @@ id=Button
 {s:"Swap",t:"2025-12-28"}=Echanger
 {s:"Restart",t:"2025-12-28"}=Rel.
 {s:"Log",t:"2025-12-28"}=Journal
-{s:"Run",t:"2026-01-02"}=Executer
-{s:"Clear",t:"2026-01-02"}=Réinit.
+{s:"Run",t:"2026-01-11"}=Executer
+{s:"Clear",t:"2026-01-11"}=Réinit.
 {s:"Grace",t:"2026-01-02"}=Doux
 {s:"Open",t:"2025-12-16"}=Ouvrir
 {s:"Recent",t:"2025-12-16"}=Recent
-{s:"Save As",t:"2026-01-02"}=Sous
+{s:"Save As",t:"2026-01-11"}=Sous
 {s:"Filter",t:"2025-12-16"}=Filtre
-{s:"Test",t:"2026-01-02"}=Test
-{s:"Load",t:"2026-01-02"}=Charger
+{s:"Test",t:"2026-01-11"}=Test
+{s:"Load",t:"2026-01-11"}=Charger
 {s:"Continue",t:"2025-12-28"}=Suite
 {s:"Ok",t:"2025-12-15"}=OK
 {s:"Copy",t:"2025-12-15"}=Copier
 {s:"Paste",t:"2025-12-28"}=Coller
 {s:"Cancel",t:"2025-12-22"}=Annuler
-{s:"RGC",t:"2026-01-02"}=RGC
+{s:"RGC",t:"2026-01-11"}=RGC
 {s:"Browse",t:"2025-12-28"}=Parcourir
 {s:"Apply",t:"2025-12-18"}=Appliquer
 {s:"Reset All Tutorials",t:"2025-12-16"}=Réinitialiser tous les tutoriels
 {s:"Use",t:"2025-12-16"}=Utiliser
 {s:"Copy PGN",t:"2025-12-15"}=Copier PGN
 {s:"Copy FEN",t:"2025-12-15"}=Copier FEN
-{s:"Select",t:"2025-12-31"}=Sélectionner
+{s:"Select",t:"2026-01-11"}=Sélectionner
 {s:"Tournament",t:"2025-12-14"}=Tournoi
 {s:"SPRT Tournament",t:"2025-12-14"}=Tournoi SPRT
 {s:"Tutorial",t:"2025-12-14"}=Tutoriel
@@ -114,21 +114,21 @@ id=Checkbox
 {s:"Score from White POV",t:"2025-12-28"}=Score du point de vue des blancs
 {s:"Ponder",t:"2025-12-28"}=Réfléchir
 {s:"Gauntlet",t:"2025-12-28"}=Gauntlet
-{s:"Use Pentanomial",t:"2025-12-31"}=Use Pentanomial
+{s:"Use Pentanomial",t:"2026-01-11"}=Use Pentanomial
 {s:"Show all SPRT model variants",t:"2026-01-02"}=Show all SPRT model variants
 
 [Translation]
 id=Input
-{s:"Concurrency",t:"2026-01-02"}=Simultanéité
+{s:"Concurrency",t:"2026-01-11"}=Simultanéité
 {s:"Search",t:"2026-01-02"}=Recherche
-{s:"Hash (MB)",t:"2025-12-31"}=Hash (MB)
-{s:"Restart",t:"2025-12-31"}=Relancer
-{s:"Trace",t:"2025-12-31"}=Trace
+{s:"Hash (MB)",t:"2026-01-11"}=Hash (MB)
+{s:"Restart",t:"2026-01-11"}=Relancer
+{s:"Trace",t:"2026-01-11"}=Trace
 File format=Format de fichier
-{s:"Order",t:"2025-12-31"}=Ordre
-{s:"First opening",t:"2025-12-31"}=Première ouverture
-{s:"Random seed",t:"2025-12-31"}=Graine aléatoire
-{s:"Switch policy",t:"2025-12-31"}=Politique de changement
+{s:"Order",t:"2026-01-11"}=Ordre
+{s:"First opening",t:"2026-01-11"}=Première ouverture
+{s:"Random seed",t:"2026-01-11"}=Graine aléatoire
+{s:"Switch policy",t:"2026-01-11"}=Politique de changement
 {s:"Event",t:"2025-12-23"}=Événement
 {s:"Type",t:"2025-12-23"}=Type
 {s:"Rounds",t:"2025-12-23"}=Rondes
@@ -136,29 +136,29 @@ File format=Format de fichier
 {s:"Same opening",t:"2025-12-23"}=Même ouverture
 {s:"No color swap",t:"2025-12-23"}=Pas d'échange de couleur
 {s:"Average Elo",t:"2025-12-23"}=Elo moyen
-{s:"Hours",t:"2025-12-31"}=Heures
-{s:"Minutes",t:"2025-12-31"}=Minutes
-{s:"Seconds",t:"2025-12-31"}=Secondes
-{s:"Increment Minutes",t:"2025-12-31"}=Incrément Minutes
-{s:"Increment Seconds",t:"2025-12-31"}=Incrément Secondes
-{s:"Increment Milliseconds",t:"2025-12-31"}=Incrément Millisecondes
-{s:"Moves to Play",t:"2025-12-31"}=Coups à jouer
-{s:"Predefined time control",t:"2025-12-31"}=Contrôle du temps prédéfini
-{s:"Append mode",t:"2025-12-31"}=Mode ajout
-{s:"Save only finished games",t:"2025-12-31"}=Sauvegarder uniquement les parties terminées
-{s:"Minimal tags",t:"2025-12-31"}=Tags minimaux
-{s:"Include clock",t:"2025-12-31"}=Inclure l'horloge
-{s:"Include eval",t:"2025-12-31"}=Inclure l'évaluation
-{s:"Include PV",t:"2025-12-31"}=Inclure PV
-{s:"Include depth",t:"2025-12-31"}=Inclure la profondeur
-{s:"Active",t:"2025-12-31"}=Actif
-{s:"Min full moves",t:"2025-12-31"}=Coups complets min
-{s:"Required consecutive moves",t:"2025-12-31"}=Coups consécutifs requis
-{s:"Centipawn threshold",t:"2025-12-31"}=Seuil centipawn
-{s:"Both side decides",t:"2025-12-28"}=Les deux côtés décident
-{s:"Alpha (‰)",t:"2025-12-31"}=Alpha (‰)
-{s:"Beta (‰)",t:"2025-12-31"}=Beta (‰)
-{s:"Max Games",t:"2025-12-31"}=Parties max
+{s:"Hours",t:"2026-01-11"}=Heures
+{s:"Minutes",t:"2026-01-11"}=Minutes
+{s:"Seconds",t:"2026-01-11"}=Secondes
+{s:"Increment Minutes",t:"2026-01-11"}=Incrément Minutes
+{s:"Increment Seconds",t:"2026-01-11"}=Incrément Secondes
+{s:"Increment Milliseconds",t:"2026-01-11"}=Incrément Millisecondes
+{s:"Moves to Play",t:"2026-01-11"}=Coups à jouer
+{s:"Predefined time control",t:"2026-01-11"}=Contrôle du temps prédéfini
+{s:"Append mode",t:"2026-01-11"}=Mode ajout
+{s:"Save only finished games",t:"2026-01-11"}=Sauvegarder uniquement les parties terminées
+{s:"Minimal tags",t:"2026-01-11"}=Tags minimaux
+{s:"Include clock",t:"2026-01-11"}=Inclure l'horloge
+{s:"Include eval",t:"2026-01-11"}=Inclure l'évaluation
+{s:"Include PV",t:"2026-01-11"}=Inclure PV
+{s:"Include depth",t:"2026-01-11"}=Inclure la profondeur
+{s:"Active",t:"2026-01-11"}=Actif
+{s:"Min full moves",t:"2026-01-11"}=Coups complets min
+{s:"Required consecutive moves",t:"2026-01-11"}=Coups consécutifs requis
+{s:"Centipawn threshold",t:"2026-01-11"}=Seuil centipawn
+{s:"Both side decides",t:"2026-01-11"}=Les deux côtés décident
+{s:"Alpha (‰)",t:"2026-01-11"}=Alpha (‰)
+{s:"Beta (‰)",t:"2026-01-11"}=Beta (‰)
+{s:"Max Games",t:"2026-01-11"}=Parties max
 {s:"Number of Games",t:"2025-12-16"}=Nombre de parties
 {s:"Note Duration",t:"2025-12-18"}=Durée de note
 {s:"Success Duration",t:"2025-12-18"}=Durée de succès
@@ -192,13 +192,13 @@ File format=Format de fichier
 {s:"UCI_Chess",t:"2025-12-28"}=UCI_Chess
 {s:"UCI_LimitStrength",t:"2025-12-28"}=UCI_LimitStrength
 {s:"UCI_Elo",t:"2025-12-28"}=UCI_Elo
-{s:"Elo Lower (H\\1)",t:"2025-12-31"}=Elo Lower (H\1)
-{s:"Elo Upper (H\\1)",t:"2025-12-31"}=Elo Upper (H\1)
+{s:"Elo Lower (H\\1)",t:"2026-01-11"}=Elo Lower (H\1)
+{s:"Elo Upper (H\\1)",t:"2026-01-11"}=Elo Upper (H\1)
 {s:"Ponder",t:"2025-12-28"}=Ponder
 {s:"Log",t:"2025-12-28"}=Log
 {s:"UCI_AnalyseMode",t:"2025-12-28"}=UCI_AnalyseMode
 {s:"##directoryPath#####directoryPath",t:"2025-12-28"}=##directoryPath#####directoryPath
-{s:"##filePath#####filePath",t:"2025-12-31"}=##filePath#####filePath
+{s:"##filePath#####filePath",t:"2026-01-11"}=##filePath#####filePath
 {s:"Milliseconds",t:"2025-12-13"}=Milliseconds
 {s:"EGTB depth",t:"2025-12-16"}=EGTB depth
 {s:"##enpassant#####enpassant",t:"2025-12-15"}=##enpassant#####enpassant
@@ -208,29 +208,34 @@ File format=Format de fichier
 {s:"Underpromotions",t:"2025-12-22"}=Underpromotions
 {s:"Move Overhead",t:"2025-12-22"}=Move Overhead
 {s:"Arguments",t:"2025-12-28"}=Arguments
-{s:"SPRT Model",t:"2025-12-31"}=SPRT Model
+{s:"SPRT Model",t:"2026-01-11"}=SPRT Model
+{s:"kAttackLinear",t:"2026-01-11"}=kAttackLinear
+{s:"kAttackQuadratic",t:"2026-01-11"}=kAttackQuadratic
+{s:"kAttackActivation",t:"2026-01-11"}=kAttackActivation
+{s:"kAttackDampening",t:"2026-01-11"}=kAttackDampening
+{s:"kAttackScale",t:"2026-01-11"}=kAttackScale
 
 [Translation]
 id=Option
-{s:"Yes",t:"2025-12-31"}=Oui
-{s:"Inactive",t:"2025-12-31"}=Inactif
-{s:"Test",t:"2025-12-31"}=Test
-{s:"Active",t:"2025-12-31"}=Actif
-{s:"No",t:"2025-12-31"}=Non
+{s:"Yes",t:"2026-01-11"}=Oui
+{s:"Inactive",t:"2026-01-11"}=Inactif
+{s:"Test",t:"2026-01-11"}=Test
+{s:"Active",t:"2026-01-11"}=Actif
+{s:"No",t:"2026-01-11"}=Non
 
 [Translation]
 id=Section
 {s:"Available Engines",t:"2025-12-14"}=Moteurs disponibles
 {s:"Selected Engines",t:"2025-12-14"}=Moteurs sélectionnés
-{s:"Global Engine Settings",t:"2026-01-02"}=Paramètres globaux du moteur
-{s:"Engines",t:"2026-01-02"}=Moteurs
-{s:"Opening",t:"2026-01-02"}=Ouverture
+{s:"Global Engine Settings",t:"2026-01-11"}=Paramètres globaux du moteur
+{s:"Engines",t:"2026-01-11"}=Moteurs
+{s:"Opening",t:"2026-01-11"}=Ouverture
 {s:"Tournament",t:"2025-12-28"}=Tournoi
-{s:"Time Control",t:"2026-01-02"}=Contrôle du temps
-{s:"Pgn",t:"2026-01-02"}=Pgn
-{s:"Adjudicate draw",t:"2026-01-02"}=Adjuger nulle
-{s:"Adjudicate resign",t:"2026-01-02"}=Adjuger abandon
-{s:"SPRT Configuration",t:"2026-01-02"}=Configuration SPRT
+{s:"Time Control",t:"2026-01-11"}=Contrôle du temps
+{s:"Pgn",t:"2026-01-11"}=Pgn
+{s:"Adjudicate draw",t:"2026-01-11"}=Adjuger nulle
+{s:"Adjudicate resign",t:"2026-01-11"}=Adjuger abandon
+{s:"SPRT Configuration",t:"2026-01-11"}=Configuration SPRT
 {s:"Configuration",t:"2025-12-21"}=Configuration
 {s:"Tests",t:"2025-12-16"}=Tests
 {s:"Snackbar Settings",t:"2025-12-18"}=Paramètres Snackbar
@@ -246,9 +251,9 @@ id=Section
 
 [Translation]
 id=Snackbar
-{s:"Note",t:"2025-12-23"}=Note
-{s:"Nothing to clear.",t:"2025-12-22"}=Rien à effacer.
-{s:"Success",t:"2026-01-02"}=Succès
+{s:"Note",t:"2026-01-11"}=Note
+{s:"Nothing to clear.",t:"2026-01-11"}=Rien à effacer.
+{s:"Success",t:"2026-01-11"}=Succès
 {s:"SPRT tournament started",t:"2026-01-02"}=Tournoi SPRT démarré
 {s:"SPRT tournament stopped",t:"2025-12-21"}=Tournoi SPRT arrêté
 {s:"Epd analysis started",t:"2025-12-21"}=Analyse EPD démarrée
@@ -322,6 +327,8 @@ id=Snackbar
 {s:"Tournament saved to: C:\\Development\\qapla-chess-gui\\test\\log\\bug.qtour",t:"2025-12-23"}=Tournament saved to: C:\Development\qapla-chess-gui\test\log\bug.qtour
 {s:"Tournament loaded from: C:\\Development\\qapla-chess-gui\\test\\log\\bug.qtour",t:"2025-12-23"}=Tournament loaded from: C:\Development\qapla-chess-gui\test\log\bug.qtour
 {s:"SPRT tournament stopped.\nAll SPRT tournament results have been cleared.",t:"2025-12-28"}=SPRT tournament stopped.\nAll SPRT tournament results have been cleared.
+{s:"SPRT tournament saved to: C:\\Development\\qapla-chess-gui\\test\\log\\bug.qsprt",t:"2026-01-11"}=SPRT tournament saved to: C:\Development\qapla-chess-gui\test\log\bug.qsprt
+{s:"SPRT tournament loaded from: C:\\Development\\qapla-chess-gui\\test\\log\\bug.qsprt",t:"2026-01-11"}=SPRT tournament loaded from: C:\Development\qapla-chess-gui\test\log\bug.qsprt
 
 [Translation]
 id=Table
@@ -383,24 +390,24 @@ id=Tooltip
 {s:"Add new engine from executable file",t:"2025-12-23"}=Ajouter un nouveau moteur à partir du fichier exécutable
 {s:"Allow engines to think during opponent's time",t:"2025-12-21"}=Permettre aux moteurs de réfléchir pendant le temps de l'adversaire
 {s:"Path to opening file (.epd, .pgn, or raw FEN text)",t:"2025-12-21"}=Chemin vers le fichier d'ouverture (.epd, .pgn ou texte FEN brut)
-{s:"Hash table size in megabytes for engine memory",t:"2025-12-21"}=Taille de la table de hachage en mégaoctets pour la mémoire du moteur
+{s:"Hash table size in megabytes for engine memory",t:"2026-01-11"}=Taille de la table de hachage en mégaoctets pour la mémoire du moteur
 {s:"Number of games to run in parallel",t:"2025-12-21"}=Nombre de parties à exécuter en parallèle
-{s:"Clear all SPRT tournament data and results",t:"2026-01-02"}=Effacer toutes les données et résultats du tournoi SPRT
+{s:"Clear all SPRT tournament data and results",t:"2026-01-11"}=Effacer toutes les données et résultats du tournoi SPRT
 {s:"Remove this engine from selection",t:"2025-12-28"}=Retirer ce moteur de la sélection
 {s:"Run Monte Carlo test to estimate SPRT test duration",t:"2025-12-21"}=Exécuter un test Monte Carlo pour estimer la durée du test SPRT
-{s:"Load SPRT tournament configuration and results from file",t:"2025-12-31"}=Charger la configuration et les résultats du tournoi SPRT depuis un fichier
-{s:"Save SPRT tournament configuration and results to file",t:"2025-12-21"}=Sauvegarder la configuration et les résultats du tournoi SPRT dans un fichier
+{s:"Load SPRT tournament configuration and results from file",t:"2026-01-11"}=Charger la configuration et les résultats du tournoi SPRT depuis un fichier
+{s:"Save SPRT tournament configuration and results to file",t:"2026-01-11"}=Sauvegarder la configuration et les résultats du tournoi SPRT dans un fichier
 {s:"Seed for random number generator when order is 'random'",t:"2025-12-21"}=Graine pour le générateur de nombres aléatoires lorsque l'ordre est 'aléatoire'
 {s:"Include the engine's evaluation score in PGN comments for each move",t:"2025-12-21"}=Inclure le score d'évaluation du moteur dans les commentaires PGN pour chaque coup
 {s:"Include the search depth reached when the move was selected",t:"2025-12-16"}=Inclure la profondeur de recherche atteinte lorsque le coup a été sélectionné
 {s:"Number of positions to analyze in parallel",t:"2025-12-21"}=Nombre de positions à analyser en parallèle
-{s:"Enable global hash size setting for all engines",t:"2025-12-23"}=Activer le paramètre de taille de hachage global pour tous les moteurs
+{s:"Enable global hash size setting for all engines",t:"2026-01-11"}=Activer le paramètre de taille de hachage global pour tous les moteurs
 {s:"Enable global restart policy for all engines",t:"2025-12-23"}=Activer la politique de redémarrage global pour tous les moteurs
 {s:"Enable global trace level for all engines",t:"2025-12-23"}=Activer le niveau de trace global pour tous les moteurs
 {s:"Enable global pondering setting for all engines",t:"2025-12-23"}=Activer le paramètre de réflexion global pour tous les moteurs
 {s:"Optional event name for PGN or logging",t:"2025-12-23"}=Nom d'événement optionnel pour PGN ou journalisation
-{s:"Engine communication logging level (None/All/Command only)",t:"2025-12-23"}=Niveau de journalisation de la communication moteur (Aucun/Tout/Commande seulement)
-{s:"Whether to restart engine process between games",t:"2025-12-23"}=S'il faut redémarrer le processus moteur entre les parties
+{s:"Engine communication logging level (None/All/Command only)",t:"2026-01-11"}=Niveau de journalisation de la communication moteur (Aucun/Tout/Commande seulement)
+{s:"Whether to restart engine process between games",t:"2026-01-11"}=S'il faut redémarrer le processus moteur entre les parties
 {s:"Translation is currently work in progress. Only few parts are translated.",t:"2025-12-18"}=La traduction est actuellement en cours. Seules quelques parties sont traduites.
 {s:"Display duration for informational messages in seconds",t:"2025-12-16"}=Durée d'affichage pour les messages d'information en secondes
 {s:"Display duration for success messages in seconds",t:"2025-12-16"}=Durée d'affichage pour les messages de succès en secondes
@@ -428,7 +435,7 @@ id=Tooltip
 {s:"Continue tournament with current configuration",t:"2025-12-23"}=Continuer le tournoi avec la configuration actuelle
 {s:"All engine instance communication is logged to a single file",t:"2025-12-16"}=Toute la communication des instances moteur est journalisée dans un seul fichier
 {s:"Clear all tournament data and results",t:"2025-12-23"}=Effacer toutes les données et résultats du tournoi
-{s:"Number of games running in parallel",t:"2026-01-02"}=Nombre de parties s'exécutant en parallèle
+{s:"Number of games running in parallel",t:"2026-01-11"}=Nombre de parties s'exécutant en parallèle
 {s:"Add this engine to tournament selection",t:"2025-12-23"}=Ajouter ce moteur à la sélection du tournoi
 Tournament type:\n  gauntlet - One engine plays against all others\n  round-robin - Every engine plays against every other engine=Type de tournoi :\n  gauntlet - Un moteur joue contre tous les autres\n  round-robin - Chaque moteur joue contre chaque autre moteur
 {s:"Repeat all pairings this many times",t:"2025-12-23"}=Répéter toutes les paires ce nombre de fois
@@ -584,18 +591,19 @@ Tournament type:\n  gauntlet - One engine plays against all others\n  round-robi
 {s:"Command-line arguments to pass to the engine executable",t:"2025-12-28"}=Command-line arguments to pass to the engine executable
 {h:"e0ffa06c",s:"SPRT calculation model:\n- normalized: Recommended ",t:"2025-12-31"}=SPRT calculation model:\n- normalized: Recommended for most cases (supports pentanomial)\n- logistic: Logistic Elo model (supports pentanomial)\n- bayesian: BayesElo model (trinomial only)
 {h:"2102e505",s:"Use pentanomial statistics instead of trinomial.\nP",t:"2025-12-31"}=Use pentanomial statistics instead of trinomial.\nPentanomial provides more accurate results for paired openings.\nNote: Not available with bayesian model.
+{h:"d5c004e6",s:"Display all SPRT calculation variants (normalized,",t:"2026-01-11"}=Display all SPRT calculation variants (normalized, logistic, bayesian with trinomial/pentanomial).\nWhen disabled, only the configured model is shown.
 
 [Translation]
 id=Tab
-{s:"Engines",t:"2026-01-02"}=Moteurs
-{s:"Tournament",t:"2026-01-02"}=Tournoi
-{s:"Pgn",t:"2026-01-02"}=Pgn
-{s:"Epd",t:"2026-01-02"}=Epd
-{s:"Test",t:"2026-01-02"}=Test
-{s:"Settings",t:"2026-01-02"}=Paramètres
-{s:"Board",t:"2026-01-02"}=Échiquier
-{s:"Chatbot",t:"2026-01-02"}=Chatbot
-{s:"SPRT",t:"2026-01-02"}=SPRT
+{s:"Engines",t:"2026-01-11"}=Moteurs
+{s:"Tournament",t:"2026-01-11"}=Tournoi
+{s:"Pgn",t:"2026-01-11"}=Pgn
+{s:"Epd",t:"2026-01-11"}=Epd
+{s:"Test",t:"2026-01-11"}=Test
+{s:"Settings",t:"2026-01-11"}=Paramètres
+{s:"Board",t:"2026-01-11"}=Échiquier
+{s:"Chatbot",t:"2026-01-11"}=Chatbot
+{s:"SPRT",t:"2026-01-11"}=SPRT
 
 [Translation]
 id=Chatbot
@@ -791,7 +799,7 @@ id=Text
 {s:"No engines added. You can add engines now if you like.",t:"2025-12-16"}=Aucun moteur ajouté. Vous pouvez ajouter des moteurs maintenant si vous voulez.
 {s:"C:\\Chess\\cutechess-cli\\qapla\\1.\\2\\Leorik-\\3.\\4.exe",t:"2025-12-16"}=C:\Chess\cutechess-cli\qapla\1.\2\Leorik-\3.\4.exe
 {s:"Messages",t:"2025-12-16"}=Messages
-{s:"How can I help you?",t:"2026-01-02"}=How can I help you?
+{s:"How can I help you?",t:"2026-01-11"}=How can I help you?
 {s:"Select a tutorial to run:",t:"2025-12-21"}=Sélectionner un tutoriel à exécuter :
 {s:"Please select your preferred language:",t:"2025-12-19"}=Veuillez sélectionner votre langue préférée :
 {h:"b0ade7c5",s:"Select which engine should be tested (gauntlet eng",t:"2025-12-21"}=Select which engine should be tested (gauntlet engine). This is the engine whose performance will be measured. The other engine will be used as the comparison baseline.
@@ -804,17 +812,17 @@ id=Text
 
 [Translation]
 id=TextButton
-{s:"Tournament",t:"2026-01-02"}=Tournoi
-{s:"SPRT Tournament",t:"2026-01-02"}=Tournoi SPRT
-{s:"EPD Analysis",t:"2026-01-02"}=Analyse EPD
-{s:"Board",t:"2026-01-02"}=Échiquier
-{s:"Tutorial",t:"2026-01-02"}=Tutoriel
-{s:"Choose Language",t:"2026-01-02"}=Choisir la langue
-{s:"Messages",t:"2026-01-02"}=Messages
+{s:"Tournament",t:"2026-01-11"}=Tournoi
+{s:"SPRT Tournament",t:"2026-01-11"}=Tournoi SPRT
+{s:"EPD Analysis",t:"2026-01-11"}=Analyse EPD
+{s:"Board",t:"2026-01-11"}=Échiquier
+{s:"Tutorial",t:"2026-01-11"}=Tutoriel
+{s:"Choose Language",t:"2026-01-11"}=Choisir la langue
+{s:"Messages",t:"2026-01-11"}=Messages
 {s:"Deutsch",t:"2025-12-19"}=Deutsch
 {s:"English",t:"2025-12-19"}=English
 {s:"Français",t:"2025-12-19"}=Français
-{s:"Add Engines",t:"2026-01-02"}=Ajouter des moteurs
+{s:"Add Engines",t:"2026-01-11"}=Ajouter des moteurs
 {s:"Cancel",t:"2025-12-21"}=Annuler
 {s:"Board Engines",t:"2025-12-21"}=Moteurs d'échiquier
 {s:"Board Window",t:"2025-12-21"}=Fenêtre d'échiquier
